# C-Group-Project

./: CMakeLists.txt  README.md  client.c  clientHandling.c  display.c  main.c  network.c  server.c
